# xapi-rs

./: .gitignore  CLAUDE.md  CLAUDE.rust.md  CONTRIBUTING.md  Cargo.toml  README.md  devenv.nix
.claude/agents/: rust-builder.md
.claude/commands/: review-rust-code.md
.github/: dependabot.yml
.github/workflows/: claude-code-review.yml  test.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
src/: client.rs  error.rs  lib.rs
src/auth/: bearer.rs  mod.rs  oauth1.rs  oauth2.rs
src/builder/: mod.rs  query.rs  request.rs
src/endpoints/: compliance.rs  direct_messages.rs  lists.rs  mod.rs  spaces.rs  tweets.rs  users.rs
src/models/: common.rs  list.rs  media.rs  mod.rs  space.rs  tweet.rs  user.rs
src/pagination/: cursor.rs  mod.rs
src/rate_limit/: middleware.rs  mod.rs  queue.rs  tracker.rs
src/retry/: classifier.rs  mod.rs  policy.rs
src/streaming/: filtered.rs  mod.rs  reconnect.rs  rules.rs  sample.rs
src/util/: mod.rs  serde_helpers.rs
